image zoom issue on mobile attempted fix

--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -67,6 +67,7 @@
   background-image: url('https://res.cloudinary.com/dw3kaeolx/image/upload/e_art:quartz,q_100/v1537414371/DSCF1091.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
   background-position: center center;
 }
 .split-line {
